# dagster-pipes-go

./: .gitignore  .golangci.yml  Makefile  README.md  channels.go  context.go  dagsterpipes.go  exception.go  exception_test.go  go.mod  loaders.go  messages.go  pyproject.toml  session.go  writers.go
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
examples/: assets.py  definitions.py  test_dagster_pipes.py
examples/check/: main.go
examples/materialize/: main.go
