[tool.poetry]
name = "dagster-pipes-go"
version = "0.0.1"
description = ""
authors = ["hupe1980"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
dagster = "^1.9.4"

[tool.poetry.group.dev.dependencies]
dagster-webserver = "^1.9.4"
pytest = "8.3.4"

[tool.dagster]
module_name = "examples.definitions"
code_location_name = "examples"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::dagster.ExperimentalWarning",
]
pythonpath = [
    "examples",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"